force-app/main/default/objects/QuoteLine__c/fields/Total_Amount_of_Buying_Local_For__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_of_Buying_Local_For__c</fullName>
    <formula>Quantity__c * BuyingListPriceLocal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount of Buying(Local)-For</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>