force-app/main/default/objects/QuoteLine__c/fields/TotalAmountBuyingLocal__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountBuyingLocal__c</fullName>
    <label>TOTAL AMOUNT OF BUYING(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>