force-app/main/default/objects/QuoteLine__c/fields/TotalAmountofBuyingFCYFor__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountofBuyingFCYFor__c</fullName>
    <formula>BuyingListPriceUSD__c *  Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount of Buying(FCY)-For</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>