force-app/main/default/objects/QuoteLine__c/fields/TotalAmountOfBuyingUSD__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountOfBuyingUSD__c</fullName>
    <label>TOTAL AMOUNT OF BUYING(USD)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>