force-app/main/default/objects/QuoteLine__c/fields/TotalAmountofSelling3rdCurrency__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountofSelling3rdCurrency__c</fullName>
    <label>Total Amount of Selling(3rd Currency)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>