force-app/main/default/objects/QuoteLine__c/fields/TotalAmountofSellingFCYFor__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountofSellingFCYFor__c</fullName>
    <formula>SellingListPriceUSD__c *  Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount of Selling(FCY)-For</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>