force-app/main/default/objects/QuoteLine__c/fields/TotalAmountSellingLocal__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountSellingLocal__c</fullName>
    <label>TOTAL AMOUNT OF SELLING(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>