force-app/main/default/objects/QuoteLine__c/fields/TotalRollupBuyUniPriceFCY__c.field-meta.xml
<CustomField>
    <fullName>TotalRollupBuyUniPriceFCY__c</fullName>
    <formula>RollupProdBuyingUnitPriceUSD__c+RollupSvcBuyingUnitPriceUSD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TOTAL ROLLUP BUYING UNIT PRICE(FCY)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>