force-app/main/default/objects/QuoteLine__c/fields/TotalRollupBuyUniPriceLocal__c.field-meta.xml
<CustomField>
    <fullName>TotalRollupBuyUniPriceLocal__c</fullName>
    <formula>RollupProdBuyingUnitPriceLocal__c+RollupSvcBuyingUnitPriceLocal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TOTAL ROLLUP BUYING UNIT PRICE(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>