force-app/main/default/objects/QuoteLine__c/fields/TotalRollupSellUnitPriceLocal__c.field-meta.xml
<CustomField>
    <fullName>TotalRollupSellUnitPriceLocal__c</fullName>
    <formula>RollupProdSellingUnitPriceLocal__c+RollupSvcSellingUnitPriceLocal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TOTAL ROLLUP SELLING UNIT PRICE(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>