force-app/main/default/objects/QuoteLine__c/recordTypes/AirLogisticsServiceQuote.recordType-meta.xml
<RecordType>
    <fullName>AirLogisticsServiceQuote</fullName>
    <active>true</active>
    <description>Service Quote Line for Air Logistics Service</description>
    <label>Air Logistics Service Quote</label>
</RecordType>