force-app/main/default/objects/QuoteLine__c/recordTypes/DomesticLogisticsServiceQuote.recordType-meta.xml
<RecordType>
    <fullName>DomesticLogisticsServiceQuote</fullName>
    <active>true</active>
    <description>Service Quote Line for Logistics Service</description>
    <label>Logistics Service Quote</label>
</RecordType>