force-app/main/default/objects/QuoteLine__c/recordTypes/ProductQuoteLine.recordType-meta.xml
<RecordType>
    <fullName>ProductQuoteLine</fullName>
    <active>true</active>
    <label>Product Quote Line</label>
</RecordType>