force-app/main/default/objects/QuoteLine__c/recordTypes/ServiceQuoteLine.recordType-meta.xml
<RecordType>
    <fullName>ServiceQuoteLine</fullName>
    <active>true</active>
    <description>Service Quote Line for Ocean(Sea) Logistic Service</description>
    <label>Service Quote Line</label>
</RecordType>