force-app/main/default/objects/QuoteLine__c/listViews/AirServiceQuoteLine.listView-meta.xml
<ListView>
    <fullName>AirServiceQuoteLine</fullName>
    <columns>QuoteID__c</columns>
    <columns>NAME</columns>
    <columns>LineItemName__c</columns>
    <columns>QuoteLineNumber__c</columns>
    <columns>Unit__c</columns>
    <columns>Quantity__c</columns>
    <columns>SellingListPriceLocal__c</columns>
    <columns>TotalAmountSellingLocal__c</columns>
    <columns>SellingAmountInclTaxLocal__c</columns>
    <columns>BuyingListPriceLocal__c</columns>
    <columns>TotalAmountBuyingLocal__c</columns>
    <columns>BuyingAmountInclTaxLocal__c</columns>
    <columns>ProfitNICTaxLocal__c</columns>
    <columns>ProfitRatioNICTaxLocal__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>QuoteLine__c.AirLogisticsServiceQuote</value>
    </filters>
    <label>2.Air Service Quote Line</label>
    <language>en_US</language>
</ListView>