force-app/main/default/objects/QuoteLine__c/listViews/MassEditQLineLogisticsBuying.listView-meta.xml
<ListView>
    <fullName>MassEditQLineLogisticsBuying</fullName>
    <columns>NAME</columns>
    <columns>QuoteLineNumber__c</columns>
    <columns>LineItemName__c</columns>
    <columns>ServicePricingID__c</columns>
    <columns>CarrierAirlinerVendor__c</columns>
    <columns>Quantity__c</columns>
    <columns>Unit__c</columns>
    <columns>ContainerType__c</columns>
    <columns>CurrencyBuying__c</columns>
    <columns>ExchangeRateBuying__c</columns>
    <columns>BuyingListPriceLocal__c</columns>
    <columns>BuyingListPriceUSD__c</columns>
    <columns>TotalAmountBuyingLocal__c</columns>
    <columns>AmountOfBuyingTaxLocal__c</columns>
    <columns>BuyingAmountInclTaxLocal__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>QuoteLine__c.DomesticLogisticsServiceQuote</value>
    </filters>
    <label>Mass Edit Q.Line-Logistics Buying</label>
    <language>en_US</language>
</ListView>