force-app/main/default/objects/QuoteLine__c/listViews/MassEditQLineLogisticsSelling.listView-meta.xml
<ListView>
    <fullName>MassEditQLineLogisticsSelling</fullName>
    <columns>NAME</columns>
    <columns>QuoteLineNumber__c</columns>
    <columns>LineItemName__c</columns>
    <columns>ServicePricingID__c</columns>
    <columns>Quantity__c</columns>
    <columns>Unit__c</columns>
    <columns>ContainerQuantity__c</columns>
    <columns>CurrencySelling__c</columns>
    <columns>ExchangeRateSelling__c</columns>
    <columns>SellingListPriceLocal__c</columns>
    <columns>SellingListPriceUSD__c</columns>
    <columns>TotalAmountSellingLocal__c</columns>
    <columns>AmountOfSellingTaxLocal__c</columns>
    <columns>SellingAmountInclTaxLocal__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>QuoteLine__c.DomesticLogisticsServiceQuote</value>
    </filters>
    <label>Mass Edit Q.Line-Logistics Selling</label>
    <language>en_US</language>
</ListView>